--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://rafaeltomais.github.io/pokeapi-react",
+  "homepage": "https://rafaeltomais.github.io/pokeapi-react/public/index",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
