--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://rafaeltomais.github.io/pokeapi-react/public/index",
+  "homepage": "https://rafaeltomais.github.io/pokeapi-react",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy":"npm run build && cd node_modules && cd .bin && gh-pages -d ../../build"
   },
   "eslintConfig": {
     "extends": [
