--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "gh-pages": "^2.2.0"
   },
-  "homepage": "https://rafaeltomais.github.io/pokeapi-react",
+  "homepage": "https://rafaeltomais.github.io/pokeapi-react/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
