--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "npm run build && cd node_modules && cd .bin && gh-pages -d ../../build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
